--- a/scss/index.scss
+++ b/scss/index.scss
@@ -11,6 +11,10 @@
 @import "../pages/search.scss";
 @import "../pages/cart.scss";
 @import "../pages/orders.scss";
+@import "../pages/reports.scss";
+@import "../pages/terms.scss";
+@import "../pages/faq.scss";
+@import "../pages/contact.scss";
 
 //Components
 @import "../components/Header/Header.scss";
